--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc Incoming</p>
+              <p>B.Sc. Bachelors Degree<br />M.Sc In View</p>
             </div>
           </div>
           <div class="text-container">
